# nitrix

./: .gitignore  BACKLOG.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  MIGRATION.md  NITRIX_FEEDBACK_ILEX.md  NITRIX_FEEDBACK_JOSA.md  README.md  SPEC.md  SPEC_UPDATE.md  SPEC_UPDATE_v0.2.md  SPEC_UPDATE_v0.3.md  SPEC_UPDATE_v0.4.md  SPEC_UPDATE_v0.5.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
_refstubs/: semiring_gemm.py  test_semiring_gemm.py
bench/: G0_ELL_REPORT.md  MEM_STREAMING_KERNEL.md  PERF_AUDIT.md  PERF_EDT_FH.md  PERF_LAYER_NORM.md  PERF_LOBPCG.md  PERF_REGISTRATION.md  PERF_REGISTRATION_V2.md  PERF_SEMIRING_CONV.md  PERF_SEMIRING_MATMUL.md  PERF_TRILINEAR.md  _util.py  conv_trajectory.py  early_exit_probe.py  g0_ampere_ell.py  ic_vs_forward.py  mem_streaming_kernel.py  perf_audit.py  perf_edt_fh.py  perf_layer_norm.py  perf_lobpcg.py  perf_registration.py  perf_registration_v2.py  perf_semiring_conv.py  perf_semiring_matmul.py  trilinear_resample.py  validate_lme_gpu.py
docs/: .gitignore  README.md  _docstring_inventory.md  _quarto.yml  brand.scss  index.qmd  op_matrix.json  op_matrix.md
docs/benchmarks/: README.md
docs/design/: backend-selection.md  backward-kernels.md  bias-field.md  bounded-bilateral.md  convolution.md  eigsolve-dispatcher.md  ell-on-triton.md  field-log.md  gaussian-process-implementation.md  geometry-suite.md  geometry.md  gp-non-gaussian-lengthscale.md  graph.md  linalg.md  lme.md  lobpcg-implicit-vjp.md  mesh-graph-conv.md  morphology.md  op-matrix.md  perf-audit-2025-05.md  permutohedral-g2.md  post-buildout-rfc.md  registration-suite-v2.md  registration-suite-v3.md  registration-suite-v4-force-kernels.md  registration-suite-v4-phase1-mi-force.md  registration-suite-v4-phase2.md  registration-suite-v4.md  registration.md  semiring-protocols.md  signal-and-numerics.md  smoothing.md  sparse-specialisations.md  sphere-grid.md  stats-suite-review.md  stats.md  streaming-kernel.md  testing-strategy.md
docs/explanation/: fellner-schall.qmd  foundations.qmd  gam.qmd  gamm.qmd  glm.qmd  glmm.qmd  hsgp.qmd  index.qmd  lme.qmd  solvers.qmd
docs/explanation/geometry/: curvature.qmd  foundations.qmd  graph-geometry.qmd  index.qmd  laplace-beltrami.qmd  operators.qmd  performance.qmd  solvers.qmd  spectral.qmd  volume-surface.qmd  volumes.qmd
docs/explanation/primer/: differentiable-programming.qmd  differentiation.qmd  hardware.qmd  implicit-differentiation.qmd  index.qmd  inductive-bias.qmd  three-kernels.qmd  xla-jax.qmd
docs/explanation/registration/: diffeomorphic.qmd  (+9 more)
docs/feature-requests/: README.md  affine-matrix-algebra.md  alternative-interp-backends-xla.md  attention-cudnn-backend.md  attention-kernels.md  attention-no-upcast-knob.md  augment-synthetic-connectivity.md  autotune-perf-floor.md  boundary-mode-parity.md  catmull-rom-interpolator.md  clifford-geometric-algebra.md  clustering-primitives.md  compensated-summation.md  compute-vertex-normals.md  connected-components.md  connectopy-symmetric-degree-normalisation.md  continuous-wavelet-transform.md  contrastive-ssl-losses.md  crop-to-nonzero.md  cross-entropy-focal.md  cubic-bspline-prefilter-backend-parity.md  cubic-resample.md  dice-loss.md  discrete-exterior-calculus.md  distance-transform-anisotropic-sampling.md  doc-gaussian-kernel-gamma.md  doc-iir-backend-default.md  doc-instantaneous-frequency-narrowband-caveat.md  doc-lomb-scargle-cpu-eigh-caveat.md  doc-lomb-scargle-eigh-factorisation.md  doc-lomb-scargle-interpolate-intended-use.md  doc-lomb-scargle-normalisation.md  doc-op-matrix-inventory-gaps.md  doc-op-matrix-missing-tangent.md  doc-relaxed-modularity-newman-factor.md  doc-tsconv-cross-correlation.md  dynamics-suite.md  edge-aggregate-log-euclidean.md  field-regularisers.md  fixed-point-combinators.md  (+114 more)
docs/reference/: _dimensions.yml  index.qmd  nitrix-augment-geometric.qmd  nitrix-augment-intensity.qmd  nitrix-augment-synthesis.qmd  nitrix-bias-correction.qmd  nitrix-bias-n4.qmd  nitrix-bias.qmd  nitrix-geometry-affine.qmd  nitrix-geometry-algebra.qmd  nitrix-geometry-coords.qmd  nitrix-geometry-deformation.qmd  nitrix-geometry-differential.qmd  nitrix-geometry-grid.qmd  nitrix-geometry-intersection.qmd  nitrix-geometry-isosurface.qmd  nitrix-geometry-pyramid.qmd  nitrix-geometry-sphere.qmd  nitrix-geometry-sphere_grid.qmd  nitrix-geometry-surface.qmd  nitrix-geometry-topology.qmd  nitrix-geometry-transform.qmd  nitrix-geometry.qmd  nitrix-graph-community.qmd  nitrix-graph-connectopy.qmd  nitrix-graph-laplacian.qmd  nitrix-graph-parcellation.qmd  nitrix-graph.qmd  nitrix-linalg-decompose.qmd  nitrix-linalg-kernel.qmd  nitrix-linalg-krylov.qmd  nitrix-linalg-matrix.qmd  nitrix-linalg-matrix_function.qmd  nitrix-linalg-optimize.qmd  nitrix-linalg-residual.qmd  nitrix-linalg-solve.qmd  nitrix-linalg-spd.qmd  nitrix-linalg.qmd  nitrix-metrics-classification.qmd  nitrix-metrics-contrastive.qmd  (+67 more)
src/nitrix/: __init__.py  docutil.py  resid.py  util.py
tests/: _golden.py  _real_meshes.py  conftest.py  test_affine.py  test_apply_operator.py  test_augment.py  test_augment_simulate.py  test_backend.py  test_backward.py  test_basis.py  test_batching.py  test_bbr.py  test_betareg.py  test_bias.py  test_brainsmash.py  test_closed_form_jacobian.py  test_cluster.py  test_cohort_svf.py  test_connectivity.py  test_conv.py  test_corr.py  test_cost_mask.py  test_cov.py  test_cwt.py  test_dec.py  test_decompose.py  test_demons_force_kernel.py  test_demons_recipe.py  test_docutil.py  test_dtype_recovery.py  test_effect.py  test_eigsolve.py  test_ell.py  test_ell_edge_aggregate.py  test_ell_masking_semirings.py  test_ell_sectioned.py  test_field_log.py  test_force.py  test_force_recipes.py  test_forward_early_exit.py  (+133 more)
tests/artefacts/: README.md
tests/golden/: attention_causal_float32.npz  attention_cross_float32.npz  attention_dense_float32.npz  attention_qk_norm_float32.npz  attention_windowed_bias_float32.npz  group_norm_float32.npz  instance_norm_float32.npz  layer_norm_float32.npz  selective_scan_float32.npz
tools/: __init__.py  op_matrix.py  regen_golden.py
(+856 files in other folders)
