[build-system]
requires = ["setuptools >=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nitrix"
version = "0.0.0.dev0"
description = "Neuroimaging transformations in XLA"
authors = [
  { name = "Rastko Ciric", email = "rastko@stanford.edu" },
]
maintainers = [
  { name = "Rastko Ciric", email = "rastko@stanford.edu" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
]
requires-python = ">=3.10"
dependencies = [
    "jax >= 0.3.16",
    "numpy >= 2.0",
]

[project.optional-dependencies]
dev = [
    "nox",
    "pytest",
    "pytest-cov",
    "coverage[toml]",
    "ruff",
    "mypy",
    "hypothesis",
    "pingouin",
    "gnureadline",
    "numpyro",
]

[project.urls]
"Homepage" = "https://github.com/hypercoil/nitrix"

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 2

[tool.coverage.run]
branch = true
omit = [
    '*test*',
    '*__init__*',
]

[tool.ruff]
lint.ignore = [
    "E501", # line too long: add it back when this is resolved:
    # https://github.com/astral-sh/ruff/issues/3711
]
lint.select = [
    "E",
    "F",
    "W",
    "I001",
]
line-length = 79

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "src"
allow_redefinition = true
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.uv]
dev-dependencies = [
    "nox",
    "pytest",
    "pytest-cov",
    "coverage[toml]",
    "ruff",
    "mypy",
    "hypothesis",
    "pingouin",
    "gnureadline",
    "numpyro>=0.18.0",
    "communities>=3.0.0",
]
