[build-system]
requires = ["setuptools >=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nitrix"
version = "0.0.0.dev0"
description = "Neuroimaging transformations in XLA"
authors = [
  { name = "Rastko Ciric", email = "rastko@stanford.edu" },
]
maintainers = [
  { name = "Rastko Ciric", email = "rastko@stanford.edu" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
]
# jax >= 0.10.0 requires Python >= 3.11; the nox test matrix is already
# 3.11/3.12/3.13.  A >=3.10 floor silently caps jax at the last 3.10-compatible
# release (0.4.35), which lacks jax.random.multinomial and diverges on the
# Pallas surface -- see the jax pin note below.
requires-python = ">=3.11"
dependencies = [
    # Min pin tracks the validated baseline (Dockerfile: jax[cuda12]==0.10.0;
    # bench/G0_ELL_REPORT.md, the kernels, and the Pallas-Triton gather-lowering
    # analysis are all against 0.10.0).  Below 0.10.0, jax.random.multinomial
    # (used by signal/window.py) is absent and the Pallas surface diverges, so
    # this is a hard floor per SPEC_UPDATE_v0.2 §7.2 ("pin a minimum jax").
    "jax >= 0.10.0",
    "jaxtyping >= 0.2.31",
    "numpy >= 2.0",
]

[project.optional-dependencies]
dev = [
    "nox",
    "pytest",
    "pytest-cov",
    "coverage[toml]",
    "ruff",
    "mypy",
    "hypothesis",
    "pingouin",
    "gnureadline",
    # >= 0.21: earlier numpyro imports jax.experimental.pjit.pjit_p, removed in
    # jax 0.10.  Test-only reference dep (not a runtime import; SPEC §5.2).
    "numpyro >= 0.21.0",
]

[project.urls]
"Homepage" = "https://github.com/hypercoil/nitrix"

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 2

[tool.coverage.run]
branch = true
omit = [
    '*test*',
    '*__init__*',
]

[tool.ruff]
lint.ignore = [
    "E501", # line too long: add it back when this is resolved:
    # https://github.com/astral-sh/ruff/issues/3711
]
lint.select = [
    "E",
    "F",
    "W",
    "I001",
]
line-length = 79

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "src"
allow_redefinition = true
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.uv]
dev-dependencies = [
    "nox",
    "pytest",
    "pytest-cov",
    "coverage[toml]",
    "ruff",
    "mypy",
    "hypothesis",
    "pingouin",
    "gnureadline",
    "numpyro>=0.21.0",  # < 0.21 imports pjit_p, removed in jax 0.10
    "communities>=3.0.0",
]
